tests/compile-fail/tracked_struct_not_update.rs
#[salsa::tracked]
struct MyInput<'db> {
    field: NotUpdate,
}

#[derive(Clone, Debug, Hash)]
struct NotUpdate;

fn main() {}
